feat: Adding SearchView Functionality

--- a/Lecture07/Notes/app/src/main/res/menu/menu_main.xml
+++ b/Lecture07/Notes/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.codingblocks.notes.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/search"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Search"
+        app:showAsAction="always|collapseActionView" />
 </menu>
