--- a/Lecture07/Notes/app/src/main/res/layout/item_row.xml
+++ b/Lecture07/Notes/app/src/main/res/layout/item_row.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/titleText"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40sp" />
+        app:contentPadding="10dp"
+        android:layout_margin="10dp">
 
+        <TextView
+            android:id="@+id/titleText"
+            android:text="title"
+            android:textColor="#000"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="40sp" />
+    </android.support.v7.widget.CardView>
 </LinearLayout>
